--- a/shallow_copy_VS_deep_copy.ipynb
+++ b/shallow_copy_VS_deep_copy.ipynb
@@ -118,7 +118,7 @@
         "id": "Gzu5Gj4038Un"
       },
       "source": [
-        "Both l1 and l2 poiting to the same memory locations."
+        "Both l1 and l2 pointing to the same memory locations."
       ]
     },
     {
@@ -224,7 +224,7 @@
         "id": "cSl_ivooEjQ9"
       },
       "source": [
-        "In shallow copy single list , both lists l3 & l4 poits to different memory locations..Changes in one list not effected the other list."
+        "In shallow copy single list , both lists l3 & l4 points to different memory locations..Changes in one list not effected the other list."
       ]
     },
     {
